--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                             <h3 class="panel-title">chess</h3>
                         </div>
 
-                        <div class="panel-body"><img alt="html" class="img-responsive" src="board.png"></div></a>
+                        <div class="panel-body"><img alt="html" class="img-responsive" src="chess/board.png"></div></a>
                     </div>
                     
                 </div><!-- /.col-sm-6 -->
