--- a/chess/index.html
+++ b/chess/index.html
@@ -4,7 +4,8 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title>Jake (js837)</title>
 <body>
-<iframe frameborder="0" style="height: 900px; overflow:scroll; width: 100%" src="http://js837.pythonanywhere.com"></iframe>
-
+<iframe src="http://js837.pythonanywhere.com" style="position:fixed; top:0px; left:0px; bottom:0px; right:0px; width:100%; height:100%; border:none; margin:0; padding:0; overflow:hidden; z-index:999999;">
+  Your browser doesn't support IFrames
+</iframe>
 </body>
 </html>
