--- a/index.html
+++ b/index.html
@@ -75,6 +75,21 @@
             "sudoku-solver/sudoku.png"></a>
         </div>
 
+        <div class="article" title="Sorting">
+            <a href="sorting"><img class="article-image" src=
+            "sorting/sorting.png"></a>
+        </div>
+
+        <div class="article" title="Connect 4">
+            <a href="connect4"><img class="article-image" src=
+            "connect4/connect4.jpg"></a>
+        </div>
+
+        <div class="article" title="Mr S and Mr P">
+            <a href="prod-sum"><img class="article-image" src=
+            "prod-sum/prod-sum.png"></a>
+        </div>
+
         TODO: Multicoloured borders, SPlit into projects and notes?
         TOADD:
          - Sorting page...
