Added Project Euler

--- a/index.html
+++ b/index.html
@@ -90,6 +90,11 @@
             "prod-sum/prod-sum.png"></a>
         </div>
 
+        <div class="article" title="Project Euler">
+            <a href="project-euler"><img class="article-image" src=
+            "project-euler/euler.png"></a>
+        </div>
+
         TODO: Multicoloured borders, SPlit into projects and notes?
         TOADD:
          - Sorting page...
