--- a/index.html
+++ b/index.html
@@ -7,41 +7,8 @@
     <title>Jake (js837)</title>
     <meta content="Jake" name="author">
     <meta content="algorithms,programming" name="keywords">
-    <style type="text/css">
-        body {
-            max-width:700px;
-            margin-left:auto;
-            margin-right:auto;
-            background-color: #edebe6;
-            color: #636363;
-            line-height: 27px;
-            font-size: 18px;
-        }
-        a {
-            text-decoration: none;
-            color: #2090C0;
-        }
-        div.header {
-            margin-bottom: 20px;
-            padding: 9px;
-        }
+    <link rel="stylesheet" type="text/css" href="/assets/style.css">
 
-        div.article {
-            margin: 5px;
-            float:left;
-            width: 165px;
-            height: 165px;
-        }
-        img.article-image:hover {
-            border: 6px solid #5A5AFF;
-        }
-        img.article-image {
-            height: 100%;
-            width: 100%;
-            border-radius: 8%;
-            border: 6px solid rgba(255, 255, 255, 0);
-        }
-    </style>
 </head>
 <body>
     <div class="header">
