--- a/sudoku-solver/index.html
+++ b/sudoku-solver/index.html
@@ -20,7 +20,7 @@
 <div class="container">
 
 <p>
-We present a sudoku solver using a simple stack, written in Python. Although
+Here's a quick Python sudoku solver using a stack. Although
 it's easy to use recursion - Python's recursive limit is not high
 (but high enough for this problem) and is also inefficient.
 All recursive functions can be rewritten using a stack.
