--- a/index.html
+++ b/index.html
@@ -32,47 +32,35 @@
             "hexdrawing/hex.png"></a>
         </div>
 
-        <div class="article" title="Fences">
-            <a href="closed-fences"><img class="article-image" src=
-            "closed-fences/fence.png"></a>
-        </div>
+        <!--<div class="article" title="Fences">-->
+            <!--<a href="closed-fences"><img class="article-image" src=-->
+            <!--"closed-fences/fence.png"></a>-->
+        <!--</div>-->
 
         <div class="article" title="Sudoku solver">
             <a href="sudoku-solver"><img class="article-image" src=
             "sudoku-solver/sudoku.png"></a>
         </div>
 
-        <div class="article" title="Sorting">
-            <a href="sorting"><img class="article-image" src=
-            "sorting/sorting.png"></a>
-        </div>
+        <!--<div class="article" title="Sorting">-->
+            <!--<a href="sorting"><img class="article-image" src=-->
+            <!--"sorting/sorting.png"></a>-->
+        <!--</div>-->
 
-        <div class="article" title="Connect 4">
-            <a href="connect4"><img class="article-image" src=
-            "connect4/connect4.jpg"></a>
-        </div>
+        <!--<div class="article" title="Connect 4">-->
+            <!--<a href="connect4"><img class="article-image" src=-->
+            <!--"connect4/connect4.jpg"></a>-->
+        <!--</div>-->
 
-        <div class="article" title="Mr S and Mr P">
-            <a href="prod-sum"><img class="article-image" src=
-            "prod-sum/prod-sum.png"></a>
-        </div>
+        <!--<div class="article" title="Mr S and Mr P">-->
+            <!--<a href="prod-sum"><img class="article-image" src=-->
+            <!--"prod-sum/prod-sum.png"></a>-->
+        <!--</div>-->
 
-        <div class="article" title="Project Euler">
-            <a href="project-euler"><img class="article-image" src=
-            "project-euler/euler.png"></a>
-        </div>
-
-        <!--
-        TODO: Multicoloured borders, SPlit into projects and notes?
-        TOADD:
-         - Sorting page...
-         - 4 in row...
-         - 4 colour theorem...
-         - Clustering algorithms...
-         - Impossible puzzle...
-         -->
-
-
+        <!--<div class="article" title="Project Euler">-->
+            <!--<a href="project-euler"><img class="article-image" src=-->
+            <!--"project-euler/euler.png"></a>-->
+        <!--</div>-->
 
     </div>
 
