--- a/index.html
+++ b/index.html
@@ -42,6 +42,12 @@
             "sudoku-solver/sudoku.png"></a>
         </div>
 
+        <div class="article" title="Face detection">
+            <a href="face-detection"><img class="article-image" src=
+            "face-detection/england-team-crop-faces.jpg"></a>
+        </div>
+
+
         <!--<div class="article" title="Sorting">-->
             <!--<a href="sorting"><img class="article-image" src=-->
             <!--"sorting/sorting.png"></a>-->
