--- a/sudoku-solver/index.html
+++ b/sudoku-solver/index.html
@@ -149,7 +149,7 @@ Full code <a href="sudoku.py">here</a>.
 
 </div>
 
-<script src="https://cdn.rawgit.com/google/code-prettify/master/loader/run_prettify.js"></script>
+<script src="/assets/run_prettify.js"></script>
 
 </body>
 </html>
