--- a/closed-fences/index.html
+++ b/closed-fences/index.html
@@ -4,6 +4,8 @@
     <link rel="stylesheet" type="text/css" href="/assets/style.css">
 </head>
 
+<body>
+
 <div class="header">
 Closed Fences
 </div>
