--- a/face-detection/index.html
+++ b/face-detection/index.html
@@ -81,7 +81,7 @@ Download code <a href="basic-face-detection.py">here</a>.
 
 </div>
 
-<script src="https://cdn.rawgit.com/google/code-prettify/master/loader/run_prettify.js"></script>
+<script src="/assets/run_prettify.js"></script>
 
 </body>
 </html>
