--- a/index.html
+++ b/index.html
@@ -48,10 +48,10 @@
         </div>
 
 
-        <!--<div class="article" title="Sorting">-->
-            <!--<a href="sorting"><img class="article-image" src=-->
-            <!--"sorting/sorting.png"></a>-->
-        <!--</div>-->
+        <div class="article" title="Sorting">
+            <a href="sorting"><img class="article-image" src=
+            "sorting/sorting.png"></a>
+        </div>
 
         <!--<div class="article" title="Connect 4">-->
             <!--<a href="connect4"><img class="article-image" src=-->
