Improvements to zoom and chess update

--- a/chess/index.html
+++ b/chess/index.html
@@ -20,18 +20,23 @@
 <p>
 I've started work on a chess AI. It's based around the minimax algorithm
 (with alpha-beta improvement).
+
+Code here on <a href="//github.com/js837/chess/">github</a>.
 </p>
 
 <p>
-Code here on <a href="https://github.com/js837/chess/">github</a>.
+EDIT: After spending a good deal of time testing my Python chess engine, I decided that
+Python wasn't quite fast enough so I've started <a href="//github.com/js837/go-chess">rebuilding</a> the engine in
+<a href="//golang.org/">Go</a> (a new C-like language from google).
 </p>
 
+
+
 <p>
-To save on CPU cycles this version only looks at depth 1, so isn't very good.
+To save on CPU cycles the version below only looks at depth 1, so isn't very good.
 You can explore the board tree using the tree viewer at the bottom. This
 shows the evaluation function value of each board position used in minimax.
 </p>
-
 
 
 <div>
