--- a/index.html
+++ b/index.html
@@ -58,10 +58,10 @@
             <!--"connect4/connect4.jpg"></a>-->
         <!--</div>-->
 
-        <!--<div class="article" title="Mr S and Mr P">-->
-            <!--<a href="prod-sum"><img class="article-image" src=-->
-            <!--"prod-sum/prod-sum.png"></a>-->
-        <!--</div>-->
+        <div class="article" title="Mr S and Mr P">
+            <a href="prod-sum"><img class="article-image" src=
+            "prod-sum/prod-sum.png"></a>
+        </div>
 
         <!--<div class="article" title="Project Euler">-->
             <!--<a href="project-euler"><img class="article-image" src=-->
