Change background colour to match hex

--- a/hexdrawing/index.html
+++ b/hexdrawing/index.html
@@ -12,7 +12,7 @@
              var t = e.get(0).getContext("2d");
              e.attr("width", $(window).get(0).innerWidth);
              e.attr("height", $(window).get(0).innerHeight);
-             t.fillStyle = "rgb(255, 255, 255)";
+             t.fillStyle = "#edebe6";
              t.fillRect(0, 0, e.width(), e.height())
          }
 
@@ -55,7 +55,7 @@
              var t = e.get(0).getContext("2d");
              e.attr("width", $(window).get(0).innerWidth);
              e.attr("height", $(window).get(0).innerHeight);
-             t.fillStyle = "rgb(255, 255, 255)";
+             t.fillStyle = "#edebe6";
              t.fillRect(0, 0, e.width(), e.height());
              var n = false;
              var r = ["#2ec939", "#c92e71", "#392ec9", "#f3ba42"];
