started changes to fences

--- a/index.html
+++ b/index.html
@@ -32,11 +32,6 @@
             "hexdrawing/hex.png"></a>
         </div>
 
-        <!--<div class="article" title="Fences">-->
-            <!--<a href="closed-fences"><img class="article-image" src=-->
-            <!--"closed-fences/fence.png"></a>-->
-        <!--</div>-->
-
         <div class="article" title="Sudoku solver">
             <a href="sudoku-solver"><img class="article-image" src=
             "sudoku-solver/sudoku.png"></a>
@@ -62,6 +57,13 @@
             <a href="prod-sum"><img class="article-image" src=
             "prod-sum/prod-sum.png"></a>
         </div>
+
+
+        <div class="article" title="Fences">
+            <a href="closed-fences"><img class="article-image" src=
+            "closed-fences/fence.png"></a>
+        </div>
+
 
         <!--<div class="article" title="Project Euler">-->
             <!--<a href="project-euler"><img class="article-image" src=-->
