--- a/closed-fences/index.html
+++ b/closed-fences/index.html
@@ -11,10 +11,11 @@ Closed Fences
 </div>
 
 
-<p> A closed fence in the plane is a set of non-crossing, connected line
-    segments with N corners (3 &lt; N &lt; 200). The corners or vertices
-    are each distinct and are listed in counter-clockwise order in an array
-    {x<sub>i</sub>, y<sub>i</sub>}, i in (1..N).
+<p>
+A closed fence in the plane is a set of non-crossing, connected line
+segments with N corners. The corners or vertices are each distinct
+and are listed in counter-clockwise order.
+</p>
 
 <p>Every pair of adjacent vertices defines a side of the fence. Thus
     {x<sub>i</sub> y<sub>i</sub> x<sub>i+1</sub> y<sub>i+1</sub>} is a side
@@ -54,77 +55,8 @@ Closed Fences
     x5,y5-x6,y6; and x6-y6-x1,y1 are visible or partially visible from x,y.
 
 
-<h3>PROGRAM NAME: fence4</h3>
 
-<h3>INPUT FORMAT</h3>
 
-<table border="1">
-    <tr>
-        <td> Line 1:</td>
-        <td>N, the number of corners in the fence</td>
-    </tr>
-    <tr>
-        <td> Line 2:</td>
-        <td>Two space-separated integers, x and y,
-            that are the location of the observer. Both integers will fit into 16
-            bits.
-        </td>
-    </tr>
-    <tr>
-        <td> Line 3-N+2:</td>
-        <td> A pair of space-separated integers
-            denoting the X,Y location of the corner. The pairs are given in
-            counterclockwise order. Both integers are no larger than 1000 in
-            magnitude.
-        </td>
-    </tr>
-</table>
-
-<h3>SAMPLE INPUT (file fence4.in) </h3>
-
-<pre>
-13
-5 5
-0 0
-7 0
-5 2
-7 5
-5 7
-3 5
-4 9
-1 8
-2 5
-0 9
--2 7
-0 3
--3 1 
-</pre>
-
-<h3>OUTPUT FORMAT</h3>
-
-<p>If the sequence is not a valid fence, the output is a single line
-    containing the word "NOFENCE".
-
-<p>Otherwise, the output is a listing of visible fence segments, one
-    per line, shown as four space-separated integers that represent the two
-    corners. Express the points in the segment by showing first
-    the point that is earlier in the input, then the point that is later.
-    Sort the segments for output by examining the last point and showing
-    first those points that are earlier in the input. Use the same rule on
-    the first of the two points in case of ties.
-
-<h3>SAMPLE OUTPUT (file fence4.out)</h3>
-
-<pre>
-7
-0 0 7 0
-5 2 7 5
-7 5 5 7
-5 7 3 5
--2 7 0 3
-0 0 -3 1
-0 3 -3 1
-</pre>
 
 </body>
 </html>
