Point and Line class

--- a/chess/index.html
+++ b/chess/index.html
@@ -25,7 +25,7 @@ Code here on <a href="//github.com/js837/chess/">github</a>.
 </p>
 
 <p>
-EDIT: After spending a good deal of time testing my Python chess engine, I decided that
+<b>EDIT:</b> After spending a good deal of time testing my Python chess engine, I decided that
 Python wasn't quite fast enough so I've started <a href="//github.com/js837/go-chess">rebuilding</a> the engine in
 <a href="//golang.org/">Go</a> (a new C-like language from google).
 </p>
