--- a/closed-fences/index.html
+++ b/closed-fences/index.html
@@ -2,14 +2,22 @@
 <head>
     <title>Closed Fences</title>
     <link rel="stylesheet" type="text/css" href="/assets/style.css">
+    <style>
+        img {width: 30%; display: block;}
+        div.examples img {
+            float: left;
+            border: 2px solid #DCDCDC;
+            padding: 41px;
+        }
+    </style>
 </head>
 
 <body>
 
-<div class="header">
-Closed Fences
-</div>
+<h1>Closed Fences</h1>
 
+
+<h2>Problem</h2>
 
 <p>
 A closed fence in the plane is a set of non-crossing, connected line
@@ -53,10 +61,302 @@ and are listed in counter-clockwise order.
     of the fence. A side that is parallel to the line of sight is not
     considered visible. In the figure, above the segments x3,y3-x4,y4;
     x5,y5-x6,y6; and x6-y6-x1,y1 are visible or partially visible from x,y.
+</p>
+
+
+<h2>Algorithm</h2>
+
+<p>
+Problems in coordinate-geometry tend to be fiddly due to a large number of
+corner cases.
+
+Consider the eye to be a Laser sweeping around. It is only at points
+that a transition can occur between sides that the laser is hitting.
+<br>i.e. in the image below the blue point is passed through when the laser (in red)
+changes sides.
+<img src="images/transition_example.png"/>
+With the above in mind we only need check the behavior of the laser around
+points.
+</p>
+
+
+<p>
+
+<b>Case of complete intersection:</b>
+(Dotted line is not visible)
+<img src="images/transition_example3.png"/>
+
+<b>Case of partial intersection:</b>
+<img src="images/transition_example2.png"/>
+
+</p>
+
+<p>
+This suggests we should consider the left and the right of the laser (eye-line)
+differently. On the LHS of the laser the visible line is the intersection
+closest to the eye, with angle between the line and the laser smallest and
+similarly on the RHS.
+</p>
+
+<p>
+In pseudo-code:
+</p>
+
+<pre class="prettyprint lang-python">
+for each point in fence:
+
+    # Make an eye-line (or laser line)
+    eye_line = Line(eye, point)
+
+    # Separate points on the LHS and RHS of the eye-line
+    LHS = []
+    RHS = []
+
+    for each line in fence:
+        intersection = find_intersection(eye_line, line)
+
+        angle = find_angle(eye_line, line)
+        distance_from_eye = find_distance(eye, intersection)
+
+        if intersection is a TotalIntersection:
+            # This blocks both LHS and RHS
+            LHS.add(line, distance_from_eye, angle)
+            RHS.add(line, distance_from_eye, angle)
+
+        else if line is on LHS:
+            LHS.add(line, distance_from_eye, angle)
+
+        else if line is on RHS:
+            RHS.add(line, distance_from_eye, angle)
+
+
+    # Sort LHS and RHS to find what the eye sees first.
+    # i.e. by distance then angle
+    left.sort()
+    right.sort()
+
+    # Mark the first line in LHS and the first line in RHS as
+    # visible.
+    if LHS:
+        mark_visible(LHS.first_line)
+
+    if RHS:
+        mark_visible(RHS.first_line)
+
+return visible_counts
+</pre>
+
+
+<h2>Implementation</h2>
+<p>
+ Let's start by defining Point class with some useful
+helper methods to help us with vector algebra. It's important
+that not to use any floating-point logic at any point since this will
+introduce rounding errors. We use the built-in Fraction class.
+</p>
+
+<pre class="prettyprint lang-python">
+class Point(object):
+    """
+    Cartesian 2D point class.
+    """
+
+    # Immutable, so use __new__ (not __init__)
+    def __new__(cls, x, y):
+        self = super(Point, cls).__new__(cls)
+        self.x, self.y = x, y
+        return self
+
+    def __add__(self, other):
+        return Point(self.x + other.x, self.y + other.y)
+
+    def __sub__(self, other):
+        return Point(self.x - other.x, self.y - other.y)
+
+    def __mul__(self, scalar):
+        if isinstance(scalar, (int, Fraction)):
+            return Point(scalar * self.x, scalar * self.y)
+        return NotImplemented
+
+    def __rmul__(self, other):
+        return self.__mul__(other)
+</pre>
+
+<p>
+We can now define a line Class, between two points.
+</p>
+
+<pre class="prettyprint lang-python">
+class Line(object):
+    """
+    Cartesian 2D line class.
+    """
+    def __new__(cls, start, end):
+        self = super(Line, cls).__new__(cls)
+        self.start, self.end = start, end
+        return self
+
+    def __contains__(self, point):
+        """
+        Check if the point is on the the line.
+        """
+        n = point - self.start
+        d = self.end - self.start
+
+        # First check if point is on infinite line
+        if n.x * d.y == n.y * d.x:
+            # Now check if it's on the segment
+            if n.x == d.x or n.x // d.x == 0:
+                return True
+        return False
+</pre>
+
+<p>
+Define the intersection method. There are a few cases so we need to be
+slightly careful.
+</p>
+<pre class="prettyprint lang-python">
+@staticmethod
+def intersect_extended(l1, l2):
+    """
+    Given two lines - their intersection type.
+    (INTERSECT_AS_SUBSET | INTERSECT | NO_INTERSECT)
+
+    If intersection return the t, s values (fractional).
+    """
+
+    a = (l1.end - l1.start).x
+    b = (l2.start - l2.end).x
+    c = (l1.end - l1.start).y
+    d = (l2.start - l2.end).y
+
+    det = a * d - b * c
+    if det == 0:
+        if (l2.start in l1) or (l2.end in l1):
+            # Subset
+            return INTERSECT_AS_SUBSET, 0, 0
+        else:
+            # Parallel
+            return NO_INTERSECT, 0, 0
+
+    q = (l2.start - l1.start).x
+    r = (l2.start - l1.start).y
+
+    t = Fraction((d * q - b * r), det)
+    s = Fraction((-c * q + a * r), det)
+
+    return INTERSECT, t, s
+
+</pre>
 
 
 
+<p>
+And finally the main logic - this is very similar to the pseudo code.
+Note: we don't actually explictitly compute the angle between the two lines
+since this would (in most cases) involve computing $\arccos{x}$ and also
+computing a square root i.e. $\cos{\theta} = \frac{a \cdot b}{|a||b|}$.
+</p>
 
+<p>
+Instead we use the fact that $\cos{x}$ reverses the order and square both
+sides to avoid the square root.
+</p>
+
+<pre class="prettyprint lang-python">
+def visible_sides(eye, point_list):
+    """
+    Given a point. Determine the fences that are (fully or partially)
+    visible from here.
+    """
+    N = len(point_list)
+
+    lines = [Line(point_list[i], point_list[(i + 1) % N]) for i in range(N)]
+    visible_counts = [False for _ in range(N)]
+
+    for point in point_list:
+        eye_line = Line(eye, point)
+
+        # Create two groups of lines: right/right of the eye-line
+        # Lines which completely intersect the eye-line (0<t<1) are in
+        # both groups.
+
+        left = []
+        right = []
+
+        for line_i, line in enumerate(lines):
+
+            intersect_type, t, s = Line.intersect_extended(line, eye_line)
+
+            if intersect_type == INTERSECT and s >= 0:
+
+                # Case 1: Line completely intersects eye-line
+                if 0 < t < 1:
+                    # No angle required because fence does not intersect
+                    left.append((s, 0, line_i))
+                    right.append((s, 0, line_i))
+
+                # Case 2: Eye-line touches a corner
+                else:
+                    if t == 1:
+                        line = line.reverse()
+
+                    side = eye_line.get_side(line.end)
+                    dot = Line.dot_prod(eye_line, line)
+                    dot_sign = cmp(dot, 0)
+
+                    # This isn't actually the line-angle but is equivalent
+                    # for ordering purposes.
+                    line_angle = dot_sign * Fraction(dot ** 2,
+                                                     Line.dot_prod(line, line))
+
+                    if side == +1:
+                        left.append((s, line_angle, line_i))
+                    elif side == -1:
+                        right.append((s, line_angle, line_i))
+
+        # Sort left and right to find what the eye sees first.
+        left.sort()
+        right.sort()
+
+        if left:
+            s, line_angle, line_i = left[0]
+            visible_counts[line_i] = True
+
+        if right:
+            s, line_angle, line_i = right[0]
+            visible_counts[line_i] = True
+
+    return visible_counts
+</pre>
+
+<p>
+Full code available <a href="closed_fences.py">here</a> with tests
+<a href="closed_fences.py">here</a>.
+
+</p>
+
+<p>
+Some more examples of the algorithm below. Eye (blue dot), visible sides (green).
+</p>
+
+<div class="examples">
+<img src="images/img01.svg"/>
+<img src="images/img02.svg"/>
+<img src="images/img03.svg"/>
+<img src="images/img04.svg"/>
+<img src="images/img05.svg"/>
+</div>
+
+<script type="text/x-mathjax-config">
+MathJax.Hub.Config({
+  tex2jax: {inlineMath: [['$','$'], ['\\(','\\)']]}
+});
+</script>
+<script type="text/javascript" async
+  src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-MML-AM_CHTML">
+</script>
+<script src="/assets/run_prettify.js"></script>
 
 </body>
 </html>
