--- a/closed-fences/index.html
+++ b/closed-fences/index.html
@@ -43,19 +43,20 @@ and are listed in counter-clockwise order.
     Write a program which will do the following:
 
 <ul>
-    <li> Test an ordered list of vertices {x<sub>i</sub>,y<sub>i</sub>}, i
+    <li> Test an ordered list of vertices {$ x_i $ ,$y_i$}, $ i $
         in (1..N) to see if the array is a valid fence.
 
     <li> Find the set of fence sides that a person (with no height) who is
-        standing in the plane at position (x,y) can "see" when looking at the
-        fence. The location x,y may fall anywhere not on the fence.
+        standing in the plane at position $ (x,y) $ can "see" when looking at the
+        fence. The location $ (x,y) $ may fall anywhere not on the fence.
 </ul>
 
-<p>A fence side can be seen if there exists a ray that connects (x,y)
+<p>A fence side can be seen if there exists a ray that connects $ (x,y) $
     and any point on the side, and the ray does not intersect any other side
     of the fence. A side that is parallel to the line of sight is not
-    considered visible. In the figure, above the segments x3,y3-x4,y4;
-    x5,y5-x6,y6; and x6-y6-x1,y1 are visible or partially visible from x,y.
+    considered visible. In the figure, above the segments $(x_3,y_3)-(x_4,y_4)$;
+    $(x_5,y_5)-(x_6,y_6)$; and $(x_6-y_6)-(x_1,y_1)$ are visible or
+    partially visible from $(x,y)$.
 </p>
 
 
