--- a/closed-fences/index.html
+++ b/closed-fences/index.html
@@ -16,14 +16,12 @@
 
 <h1>Closed Fences</h1>
 
+<h2>Problem</h2>
 
 <p>
 This is originally from the USA Computing Olympiad. The problem,
-"Closed Fences" and nicknamed "fence4", is as follows.
+"Closed Fences" (nicknamed "fence4") is as follows.
 </p>
-
-
-<h2>Problem</h2>
 
 <p>
 A closed fence in the plane is a set of non-crossing, connected line
@@ -37,7 +35,7 @@ and are listed in counter-clockwise order.
     the first and last vertices making the fence closed.
 
 <p> Here is a typical closed fence and a point $(x,y)$:
-<img style='width:100%;' src="images/initial_statement2.png"/>
+<img style='width:100%;' src="images/initial_statement.png"/>
 
 <p>
     Write a program which will do the following:
