Add original problem

--- a/closed-fences/index.html
+++ b/closed-fences/index.html
@@ -20,7 +20,7 @@
 
 <p>
 This is originally from the USA Computing Olympiad. The problem,
-"Closed Fences" (nicknamed "fence4") is as follows.
+"Closed Fences" (nicknamed "fence4") is as follows:
 </p>
 
 <p>
@@ -55,6 +55,10 @@ and are listed in counter-clockwise order.
     considered visible. In the figure, above the segments $(x_3,y_3)-(x_4,y_4)$;
     $(x_5,y_5)-(x_6,y_6)$; and $(x_6-y_6)-(x_1,y_1)$ are visible or
     partially visible from $(x,y)$.
+</p>
+
+<p>
+The original problem can be found <a href="fence4.html">here</a>.
 </p>
 
 
